--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Stay Gold!</title>
 	<link href='http://fonts.googleapis.com/css?family=Norican|Montserrat' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="style.css">
 	<style>
 		body {
 			font-size: 30px;
