Revert "Update index.html"

--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
 
 		var quote10 = ' "Now if you\'ll excuse me I\'ll be in the living room being feeble. If I can find the living room." - Sophia';
 
-		var quote11 = ' "Nobody ever believes me when I\'m telling the truth. I guess it's the curse of being a devastatingly beautiful woman." - Blanche';
 
-		var goldQuotes = [quote1, quote2, quote3, quote4, quote5, quote6, quote7, quote8, quote9, quote10, quote11];
+		var goldQuotes = [quote1, quote2, quote3, quote4, quote5, quote6, quote7, quote8, quote9, quote10];
 
 		var images = ['goldbackground_01.jpg', 'goldbackground_02.jpg', 'goldbackground_03.jpg', 'goldbackground_04.jpg', 'goldbackground_05.jpg', 'goldbackground_06.jpg', 'goldbackground_07.jpg', 'goldbackground_08.jpg', 'goldbackground_09.jpg', 'goldbackground_10.jpg',];
       	
