--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 		var quote10 = ' "Now if you\'ll excuse me I\'ll be in the living room being feeble. If I can find the living room." - Sophia';
 
-		var quote11 = ' "Nobody ever believes me when I\'m telling the truth. I guess it's the curse of being a devastatingly beautiful woman." - Blanche';
+		var quote11 = ' "Nobody ever believes me when I\'m telling the truth. I guess it\'s the curse of being a devastatingly beautiful woman." - Blanche';
 
 		var goldQuotes = [quote1, quote2, quote3, quote4, quote5, quote6, quote7, quote8, quote9, quote10, quote11];
 
