--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 	<div class="background"></div>
 	<div class="backgroundColor"></div>
-	<div class="wrapper"><h1>Thank You for Being a Friend, Nova Scotia Digital Services xo</h1>
+	<div class="wrapper"><h1>Thank You for Being a Friend, testing NSDS permissions? xo</h1>
 		<div class="quote">
 			<div class="quoteHolder">
 				<h2>Click the button for the best of the Golden Girls</h2>
